[gd_scene load_steps=2 format=2]

[ext_resource path="res://K8STemplate.gd" type="Script" id=1]

[node name="K8STemplate" type="GraphEdit"]
anchor_right = 1.0
anchor_bottom = 1.0
right_disconnects = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="connection_request" from="." to="." method="_on_K8STemplate_connection_request"]
[connection signal="disconnection_request" from="." to="." method="_on_K8STemplate_disconnection_request"]
